# python-agent-boilerplate

./: .claudeignore  .codexignore  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml
.claude/: README.md  settings.json
.claude/agents/: provider-adder.md  python-reviewer.md  route-builder.md  test-debugger.md
.claude/commands/: add-route.md  check.md  coverage.md  lint.md  test.md
.codex/: config.toml
.codex/agents/: planner.toml  reviewer.toml
.github/: FUNDING.yaml  copilot-workspace.yaml  dependabot.yml
app/: __init__.py  cli.py  main.py
app/agents/: assistant_agent.py  schemas.py  tools.py
app/ai/: model_client.py  model_settings.py
app/ai/providers/: openai_compatible.py
app/api/: dependencies.py  envelope.py
app/api/routes/: agent.py  health.py  models.py
app/core/: build_info.py  config.py  errors.py  logging.py  metrics.py  middleware.py  request_context.py
app/services/: agent_service.py
deploy/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secret.example.yaml  service.yaml  servicemonitor.yaml
scripts/: release.py
tests/: conftest.py  test_agent.py  test_assistant_agent.py  test_cli.py  test_config.py  test_envelope.py  test_errors.py  test_health.py  test_logging.py  test_metrics.py  test_metrics_unit.py  test_model_settings.py  test_model_settings_unit.py  test_openai_compatible.py  test_openapi.py  test_request_context.py
(+14 files in other folders)
